Mejoras estéticas. Empezando con jwt

--- a/Back-end/PracticaFinalApi/appsettings.json
+++ b/Back-end/PracticaFinalApi/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=PracticaFinal.db"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "32PdFjRs", 
+    "Issuer": "CyberPulse Labs",
+    "Audience": "CyberPulse Labs"
+  }
 }
