API jwt funciona

--- a/Back-end/PracticaFinalApi/appsettings.json
+++ b/Back-end/PracticaFinalApi/appsettings.json
@@ -10,7 +10,7 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "32PdFjRs", 
+    "Key": "4a7d1ed414474e4033ac29ccb8653d9b", 
     "Issuer": "CyberPulse Labs",
     "Audience": "CyberPulse Labs"
   }
